--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,9 @@
     </dependencies>
 
   <scm>
-    <tag>agent-server-parameter-1.0</tag>
+      <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
+      <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+      <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+      <tag>HEAD</tag>
   </scm>
 </project>
