--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     </repositories>
     <developers>
         <developer>
-            <id>sunweisheng</id>
+            <id>bluersw</id>
             <name>SunWeiSheng</name>
             <email>sunweisheng@live.cn</email>
         </developer>
